# json-pretty-compact

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
fixtures/: README.md  array-03.default  expense.default  expense.no_rules  object-02.default  readme.default  readme.json
src/: error.rs  fmt.rs  lib.rs  options.rs  token.rs
src/options/: tests.rs
src/token/: tests.rs
tests/: array-03.rs  expense.rs  object-02.rs  readme.rs  usage.rs
tests/common/: mod.rs
